RTL spacing issues changes

--- a/ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/_tabs.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/_tabs.scss
@@ -678,13 +678,13 @@
 .cmp_tabs--vertical-fullbdr {
   .nav-view-wrapp.panel > a {
     border-left: toRem(4) solid $main-green;
+    padding: toRem(24) toRem(15) toRem(24) toRem(15);
 
     @include font-family-Neotech;
 
     @include rtlBlock() {
       border-left: toRem(4) solid transparent;
       border-right: toRem(4) solid $main-green;
-      padding: toRem(24) toRem(15) toRem(24) toRem(15) !important;
     }
   }
 
@@ -696,6 +696,7 @@
 
     @include rtlBlock() {
       border-right: toRem(4) solid transparent;
+      padding: toRem(24) 0 toRem(24) toRem(24);
     }
   }
 
